apps/ntfy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  template:
    spec:
      containers:
        - name: ntfy
          image: ntfy
          args: ["serve"]
          ports:
            - containerPort: 80
