apps/ntfy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - ntfy
  defaultBackend:
    service:
      name: app
      port:
        number: 80
